<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_url"
        android:orderInCategory="100"
        android:title="@string/action_show_url"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_localhost_youcai"
        android:orderInCategory="100"
        android:title="@string/action_localhost_youcai"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_online_youcai"
        android:orderInCategory="100"
        android:title="@string/action_online_youcai"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_youcai"
        android:orderInCategory="100"
        android:title="@string/action_youcai"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
